'CartItem' images are a fixed value and its header doesnt overflow

--- a/src/Components/CartItem/CartItem.module.css
+++ b/src/Components/CartItem/CartItem.module.css
@@ -59,8 +59,14 @@
     /* itemImage */
     .itemImage{
         width: 100%;
+        height: 130px;
         border-right: 0;
         border-bottom: var(--border-gray);
+    }
+
+    /* itemDetails */
+    .itemDetails{
+        padding: 10px;
     }
 
     /* detailsHeader */
@@ -69,6 +75,7 @@
     }
 
     .detailsHeader h3{
+        white-space: nowrap;
         overflow: hidden;
         text-overflow: ellipsis;
     }
